syntax = "proto3";

package com.cinema.srv.user;


service UserService {
    // 创建一个用户
    rpc CreateUser (User) returns (Response) {
    }
    // 用户登录
    rpc UserLogin (LoginRequest) returns (LoginResponse) {
    }

}

message User {
    string nickname = 1;
    string username = 2;
    string password = 3;
    string phone = 4;
    string email = 5;
    int64 birthday = 6; // 时间戳
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string userId = 1;
    string username = 2;
    string phone = 3;
    string email = 4;
    int64 birthday = 5;
    string nickname = 6;
}


// 返回用户id
message ResponseUserId {
    string userId = 1;
}

message Response {
    // 响应是否成功
    bool success = 1;
    // 响应信息
    string msg = 2;

}